--- a/btre/templates/partials/_navbar.html
+++ b/btre/templates/partials/_navbar.html
@@ -10,42 +10,30 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <ul class="navbar-nav">
-                <li 
-                {% if '/' == request.path %}
-                    class="nav-link active mr-3"
-                {% else %}
-                    class = "nav-link mr-3"
-                {% endif %}
-                >
+                <li {% if '/' == request.path %} class="nav-link active mr-3" {% else %} class="nav-link mr-3"
+                    {% endif %}>
                     <a class="nav-link" href="{% url 'index' %}">Home</a>
                 </li>
-                <li 
-                {% if '/about/' == request.path %}
-                    class="nav-link active mr-3"
-                {% else %}
-                    class = "nav-link mr-3"
-                {% endif %}
-                >
+                <li {% if '/about/' == request.path %} class="nav-link active mr-3" {% else %} class="nav-link mr-3"
+                    {% endif %}>
                     <a class="nav-link" href="{% url 'about' %}">About</a>
                 </li>
-                <li 
-                {% if '/listings/' == request.path %}
-                    class="nav-link active mr-3"
-                {% else %}
-                    class = "nav-link mr-3"
-                {% endif %}
-                >
+                <li {% if '/listings/' == request.path %} class="nav-link active mr-3" {% else %} class="nav-link mr-3"
+                    {% endif %}>
                     <a class="nav-link" href="{% url 'listings' %}">Featured Listings</a>
                 </li>
             </ul>
 
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item mr-3">
-                    <a class="nav-link" href="{% url 'index' %}">
+
+               <li {% if '/accounts/register' == request.path %} class="nav-link active mr-3" {% else %} class="nav-link mr-3"
+                    {% endif %}>
+                    <a class="nav-link" href="{% url 'register' %}">
                         <i class="fas fa-user-plus"></i> Register</a>
                 </li>
-                <li class="nav-item mr-3">
-                    <a class="nav-link" href="{% url 'index' %}">
+                <li {% if '/accounts/login' == request.path %} class="nav-link active mr-3" {% else %} class="nav-link mr-3"
+                    {% endif %}>
+                    <a class="nav-link" href="{% url 'login' %}">
                         <i class="fas fa-sign-in-alt"></i>
 
                         Login</a>
