--- a/btre/templates/base.html
+++ b/btre/templates/base.html
@@ -12,7 +12,7 @@
     <!-- Custom -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-    <title>BTRE Real State </title>
+    <title>BTRE Real State {%block title %} {% endblock %} </title>
 </head>
 
 <body>
