--- a/btre/templates/pages/index.html
+++ b/btre/templates/pages/index.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% load humanize %}
+{% block title %} - Welcome {% endblock %} 
 {% block content %}
+
+<!-- Alerts  -->
+{% include 'partials/_alerts.html' %}
 
 <!-- Showcase -->
 <section id="showcase">
@@ -65,8 +69,6 @@
         </div>
     </div>
 </section>
-<!-- Alerts  -->
-{% include 'partials/_alerts.html' %}
 
 <!-- Listings -->
 <section id="listings" class="py-5">
